<resources>
    <string name="app_name">Asg1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_btn">Search</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="welcome">Welcome TO Home Page</string>
    <string name="email">Email</string>
</resources>